--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vuetify": "^3.6.4"
@@ -33,7 +34,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+            "no-unused-vars": "off" 
+    }
   },
   "browserslist": [
     "> 1%",
